--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lru-cache": "^10.1.0",
     "lucide-react": "^0.366.0",
     "nanoid": "^5.0.7",
-    "next": "^15.1.8",
+    "next": "15.1.11",
     "next-seo": "^6.4.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
